20_petunia/services/polonium/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polonium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polonium
  template:
    metadata:
      labels:
        app: polonium
    spec:
      containers:
        - name: polonium
          image: roskenet/polonium:2.0.0
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 8080
              name: http
