20_petunia/services/polonium/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polonium
spec:
  ingressClassName: nginx
  rules:
    - host: polonium.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polonium
                port:
                  number: 80
